      from paths with strip_chroot_path.
    - get_dpkg_status: Print debugging messages with defined variables
      only, to avoid Perl warning.
    - verify_md5sums: Remove obsolete comment regarding chroots.
    - check_group_membership: New function to check the user is a member
      of the sbuild group (Closes: #414064).
  * Sbuild/Chroot.pm:
    - Remove all special casing for sudo and schroot.  schroot is now the
      only supported method of accessing chroots.
    - end_session: Only attempt to end a session when $schroot_session is
      non-empty.
    - _setup_options:
      + Remove use of $chroot_only.
      + Remove trailing / from 'Build Location'.
    - init: Add newline to debugging message.
    - strip_chroot_path: New function to strip the chroot location from a
      path.
    - log_command: Correctly log commands when no APT Options stripping is
      needed.
    - get_command_internal: Set the working directory inside the chroot to
      the build location.
  * Sbuild/Conf.pm:
    - Don't export $source_dependencies.
    - Don't define $source_dependencies.
    - Abort with an error if $source_dependencies is defined.
    - Don't export $sudo or $chroot_mode.
    - Don't define $sudo or $chroot_mode.
    - Remove sudo sanity checks.
    - Abort with an error if $sudo or $chroot_mode are defined.
    - Don't export $chroot_only.
    - Don't define $chroot_only.
    - Abort with an error if $chroot_only is defined.
    - Define and export %alternatives.  Thanks to Martin Koeppe
      (Closes: #418060).
  * sbuild.conf:
    - Remove $source_dependencies.
    - Remove $sudo.
    - Remove $chroot_only.
  * sbuild.conf.local: Remove $source_dependencies.
  * sbuild-setup.7.in:
    - Remove sudo setup.
    - Update user section to document sbuild group membership and
      add_sbuild_user.  Remove chroot setup, which is now handled by
      schroot (Closes: #413524).
  * bin/README.bins: Remove sudo from extra package list.