@@ -69,6 +69,8 @@ sbuild (0.54) unstable; urgency=low
     - verify_md5sums: Remove obsolete comment regarding chroots.
     - check_group_membership: New function to check the user is a member
       of the sbuild group (Closes: #414064).
+    - Added new command-line argument --arch to specify the architecture,
+      and pass this to begin_session (Closes: 410576).
   * Sbuild/Chroot.pm:
     - Remove all special casing for sudo and schroot.  schroot is now the
       only supported method of accessing chroots.
@@ -84,6 +86,8 @@ sbuild (0.54) unstable; urgency=low
       needed.
     - get_command_internal: Set the working directory inside the chroot to
       the build location.
+    - begin_session: take the architecture as a second argument, and check
+      if a chroot specific for the architecture exists.
   * Sbuild/Conf.pm:
     - Don't export $source_dependencies.
     - Don't define $source_dependencies.
@@ -102,6 +106,7 @@ sbuild (0.54) unstable; urgency=low
     - Remove $sudo.
     - Remove $chroot_only.
   * sbuild.conf.local: Remove $source_dependencies.
+  * sbuild.1.in: Document --arch and chroot search order.
   * sbuild-setup.7.in:
     - Remove sudo setup.
     - Update user section to document sbuild group membership and
